# meraki

./: .gitignore  Cargo.toml  README.md
.github/workflows/: ci.yml
asm/: Makefile
docs/: integer_representation.md
nasm/: Makefile
playground/: main.mk
programs/: arrays.expect_  arrays.mk  mafs.expect  mafs.mk  return.expect  return.mk  structs.expect  structs.mk
src/: compile.rs  diagnostics.rs  lib.rs  main.rs  register_allocator.rs  scope.rs  symbol_table.rs  symtable.rs  type_.rs  type_table.rs
src/archs/: amd64.rs  arch.rs  error.rs  mod.rs
src/archs/amd64/: amd64.rs  mod.rs
src/ast/: mod.rs  node_id.rs  visitor.rs
src/codegen/: argument.rs  codegen.rs  error.rs  function.rs  locations.rs  mod.rs  module.rs  operands.rs  register.rs  sethi_ullman.rs
src/infer/: mod.rs  type_problem.rs
src/ir/: mod.rs  ordered_map.rs  ty.rs  types.rs  visitor.rs
src/lexer/: error.rs  lexer.rs  mod.rs  token.rs
src/lowering/: mod.rs  scopes.rs  symbol_table.rs  ty_collector.rs
src/macros/: c_api.c  macros.rs  mod.rs
src/parser/: diagnostics.rs  error.rs  expr.rs  expression.rs  item.rs  mod.rs  op.rs  parser.rs  precedence.rs  statement.rs  stmt.rs  type_.rs  types.rs
src/parser/expr/: error.rs  (+3 more)
src/passes/: macro_expansion.rs  mod.rs  pass.rs  symbol_resolver.rs  type_checker.rs
src/register/: mod.rs  register.rs
src/span/: span.rs
src/symbol_table/: error.rs  mod.rs  symbol_table.rs
src/ty_problem/: mod.rs
src/typecheck/: infer.rs  mod.rs  ty_problem.rs  typecheck.rs
src/types/: error.rs  mod.rs  types.rs
tests/meraki/: main.rs  run.rs
(+7 files in other folders)
