[package]
name = "meraki"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.5.9", features = ["derive"] }
indoc = "2.0.5"
libloading = "0.8.5"
thiserror = "1.0.64"

[lib]
name = "meraki"
path = "src/lib.rs"

[dev-dependencies]
serde = { version = "1.0.204", features = ["derive"] }
serde_json = "1.0.122"
